<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/day25_nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day25_nm" />

    <Button
        android:id="@+id/day25_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day25_nb" />

    <Button
        android:id="@+id/day25_jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day25_jk" />

    <Button
        android:id="@+id/day25_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="xmlOnClick"
        android:text="@string/day25_xml" />

</LinearLayout>