<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/day25_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day25_goal"
        android:inputType="phone" />

    <EditText
        android:id="@+id/day25_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/day25_content"
        android:lines="5" />

    <Button
        android:id="@+id/day25_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="noteSend"
        android:layout_gravity="right"
        android:text="@string/day25_send" />

</LinearLayout>